# antenna

./: .gitignore  CHANGELOG.md  NOTES.md  README.md  SECURITY.md  STATUS.md
.github/workflows/: ci.yml
bindings/: A2A-LIBP2P-BINDING.md  MB-PUBSUB.md
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: MBZKCreditsEscrow.sol  VerifierRegistry.sol
contracts/src/interfaces/: IDoubleSpendEvidenceVerifier.sol  IHasher.sol  IZKCreditsVerifier.sol
contracts/src/mocks/: MockDoubleSpendEvidenceVerifier.sol  MockZKCreditsVerifier.sol
contracts/src/utils/: IncrementalMerkleTree.sol  KeccakHasher.sol
contracts/test/: MBZKCreditsEscrow.t.sol
docs/: CHAIN_CONTRACTS.md  CONFORMANCE.md  IMPLEMENTATION_GUIDE.md  SDKs.md
examples/: agent-card.alice.json  category-manifest.ai.json  envelope.helprequest.json  envelope.post.json  erc8004.registration-file.alice.json  event.helprequest.anon.json  p2p-contact.alice.json
interop/: README.md  suite.json
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: canonicalize.ts  eventId.ts  runInterop.ts
networks/: sepolia.json
profiles/: EIP191.md  EIP712.md  ENS.md  ERC8004.md  ZKCredits.md
prompts/: lovable.dev.md
python/: README.md  pyproject.toml  requirements.txt
python/antenna_spec_tools/: __init__.py  canonicalize.py  event_id.py  secp256k1.py
rust/antenna-protocol/: Cargo.toml  README.md
rust/antenna-protocol/examples/: p2p_node.rs
rust/antenna-protocol/src/: eip191.rs  eip712.rs  error.rs  event_id.rs  jcs.rs  lib.rs  p2p.rs  topics.rs  types.rs
rust/antenna-protocol/tests/: interop_vectors.rs
rust/antenna-relay/: Cargo.toml  README.md
rust/antenna-relay/src/: main.rs
schemas/: antenna.category-manifest.v1.schema.json  antenna.envelope.v1.schema.json  antenna.event.v1.schema.json  antenna.p2p-contact.v1.schema.json  antenna.zkcredits.v1.schema.json
scripts/: compute_event_id.py  deploy-relay.sh  run_interop_suite.py  validate_json.py
spec/: MBP2P-REGISTRIES.md  MBP2P-SPEC.md
swift/AntennaProtocol/: Package.swift  README.md
test-vectors/jcs-sha256/: anon_help_event_id.json  primary_post_event_id.json
test-vectors/signatures/: eip191_vector1.json  eip712_vector1.json
(+14 files in other folders)
