[package]
name = "antenna-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reference Rust implementation for the Antenna Distributed Agent Social Protocol (MBP2P)."
repository = "https://example.invalid/antenna-protocol" # replace when published

[features]
default = []
p2p = ["dep:libp2p", "dep:tokio"]

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }

# Optional P2P stack
libp2p = { version = "0.54", optional = true, features = ["gossipsub", "identify", "noise", "tcp", "dns", "yamux", "ping", "macros", "websocket", "tokio"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert-json-diff = "2.0"
